[package]
name = "digado"
version = "0.1.0"
authors = ["anders martini <andersmartini2@gmail.com>", "sam wilson <sam.wilson@mirado.com>"]

[dependencies]
rocket = "0.3.9"
rocket_contrib = "0.3.9"
rocket_codegen = "0.3.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
