[package]
name = "Digado2"
version = "0.1.0"
authors = ["anders martini <andersmartini2@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
postgres = { version = "0.15", features = ["with-chrono"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rocket_contrib = "0.3.9"
chrono = "0.4.6"
